styles.css
* {
    font-family:Helvetica, Arial,  sans-serif;
    text-transform: uppercase;
    color: #25291C;
}

body {
    background-color: #E3E7D3;
}
.odin {
    width: 300px;
    margin-top:  100px;
    margin-left: 100px;
    float: left;
    border: 10px;
    border-style: solid;
    border
}

#head {
    font-size: 100px;
    text-align: center;
    font-weight: 900;
    margin: auto;
    background-color: #E6E49F;
    border-style: solid;
    border-width: 10px;
}

.list a{
    text-decoration: none;
    font-size: 30px;
    margin-left: 25px;
    font-weight: bold;
    line-height: 100px;
}
.list {
    list-style: none;
    margin-top: 100px;
}

#dish-image {
    width: 400px;
    margin-left: 50px;
    margin-top: 50px;
    float: left;
    border-style: solid;
    border-width: 10px;
}

.info {
    margin-top: 50px;
    line-height: 20px;
    
}

.ingredients {
    list-style: none;
}

#steps {
    display: inline-block;
    margin-left: 50px;
}

